--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/wallpaper"
     android:theme="@style/DialogTheme"
-    tools:context="com.relylabs.around.MainActivity">
+    tools:context="com.relylabs.neartag.MainActivity">
 
   <TextView
       android:layout_centerHorizontal="true"
