--- a/app/src/main/res/layout/snippet_app_header.xml
+++ b/app/src/main/res/layout/snippet_app_header.xml
@@ -3,6 +3,7 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
+        android:id="@+id/app_bar"
         android:layout_height="50dp"
         android:background="@drawable/white_grey_border_bottom"
         >
