--- a/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
+++ b/app/src/main/res/layout/snippet_top_gallerytoolbar.xml
@@ -42,6 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/string_next"
+                    android:visibility="invisible"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
                     android:textSize="20sp"
