--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="darkRed">#cc0000</color>
     <color name="orange">#FF3400</color>
     <color name="hashtag">#003569</color>
+    <color name="colorLine">#dfdfdf</color>
 </resources>
