--- a/app/src/main/res/drawable/circular_tag_selected.xml
+++ b/app/src/main/res/drawable/circular_tag_selected.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorWhite" />
+    <solid android:color="@color/link_blue" />
 
     <stroke android:width="2dp"
         android:color="#737074"
         />
 
 
-    <padding android:left="2dp"
+    <padding android:left="50dp"
         android:top="10dp"
-        android:right="2dp"
+        android:right="50dp"
         android:bottom="10dp"
         />
 
-    <corners android:bottomRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"/>
+    <corners android:bottomRightRadius="50dp"
+        android:bottomLeftRadius="50dp"
+        android:topLeftRadius="50dp"
+        android:topRightRadius="50dp"/>
 </shape>
