--- a/app/src/main/res/drawable/getstartedoval.xml
+++ b/app/src/main/res/drawable/getstartedoval.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#f5066e"/>
+    <solid android:color="@color/next_button_bg"/>
 
     <stroke android:width="1dp"
-        android:color="#E5E5E5"
+        android:color="@color/next_button_bg"
         />
 
 
