--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -86,8 +86,8 @@
                 android:layout_below="@+id/user_name"
                 android:textSize="12dp"
                 android:layout_marginEnd="10dp"
-                android:id="@+id/location"
-                android:text="Patna, Bihar"
+                android:id="@+id/user_location"
+                android:text=""
                 android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
