--- a/app/src/main/res/layout/snippet_app_header.xml
+++ b/app/src/main/res/layout/snippet_app_header.xml
@@ -4,9 +4,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:id="@+id/app_bar"
-        android:layout_height="50dp"
-        android:background="@drawable/white_grey_border_bottom"
-        >
+        android:backgroundTint="@color/white"
+        android:layout_height="50dp">
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
@@ -17,17 +16,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <ImageView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_centerVertical="true"
-                    android:id="@+id/menu"
-                    android:visibility="gone"
-                    android:src="@drawable/ic_menu_h"/>
-
                 <ImageView
                     android:layout_alignParentRight="true"
                     android:layout_width="40dp"
@@ -39,9 +27,6 @@
 
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
-
-
-
     </android.support.design.widget.AppBarLayout>
 
 </merge>
