--- a/app/src/main/res/layout/snippet_app_header.xml
+++ b/app/src/main/res/layout/snippet_app_header.xml
@@ -24,7 +24,21 @@
                     android:layout_centerVertical="true"
                     android:id="@+id/user_profile_shortlink"
                     android:src="@drawable/profile_short_link"/>
-
+                <TextView
+                    android:id="@+id/empty_profile_image"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
+                    android:textColor="@color/white"
+                    android:text="न"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:visibility="invisible"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center_horizontal"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/blank_circular_profile"
+                    />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
