Added app icons and view comments enhancements

--- a/app/src/main/res/layout/fragment_view_comments.xml
+++ b/app/src/main/res/layout/fragment_view_comments.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorWhite"
     android:layout_height="match_parent">
 
@@ -14,10 +15,55 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_below="@+id/relLayout1"
+        android:id="@+id/comment_title"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_height="30dp"
+            android:id="@+id/post_creator_profile_image"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/ic_profile_avatar"
+            app:civ_border_color="@color/black"
+            app:civ_border_width="0.5dp"/>
+
+        <TextView
+            android:layout_toRightOf="@+id/post_creator_profile_image"
+            android:layout_width="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_height="wrap_content"
+            android:text="mitch.tabian"
+            android:id="@+id/post_creator_name"
+            android:layout_marginLeft="15dp"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="this is a comment"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:layout_toRightOf="@+id/post_creator_name"
+            android:id="@+id/post_message"/>
+    </RelativeLayout>
+    <View
+        android:id="@+id/seperator"
+        android:layout_below="@+id/comment_title"
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="@color/grey" />
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/relLayout2"
-        android:layout_below="@+id/relLayout1"
+        android:layout_below="@+id/seperator"
         android:layout_marginBottom="60dp">
 
         <android.support.v7.widget.RecyclerView
@@ -25,7 +71,13 @@
             android:layout_height="match_parent"
             android:id="@+id/listView"></android.support.v7.widget.RecyclerView>
 
-
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        android:id="@+id/busy_fetch"
+        android:layout_centerInParent="true"
+        />
     </RelativeLayout>
 
     <RelativeLayout
@@ -51,8 +103,9 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_checkmark"
+            android:src="@drawable/ic_add_comments"
             android:id="@+id/ivPostComment"
             android:layout_alignParentRight="true"/>
 
