--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -121,7 +121,7 @@
         android:layout_below="@+id/header_row"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <com.relylabs.neartag.Utils.SquareImageView
+        <com.neartag.in.Utils.SquareImageView
             android:layout_alignParentLeft="true"
             android:id="@+id/banner_image"
             android:adjustViewBounds="true"
