--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -184,7 +184,7 @@
             android:id="@+id/whatsapp_sharing"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/whatsapp" />
+            android:src="@drawable/whatsapp_black" />
             <TextView
                 android:textSize="12sp"
                 android:textColor="#3b3939"
