--- a/app/src/main/res/layout/tag_search_fragment.xml
+++ b/app/src/main/res/layout/tag_search_fragment.xml
@@ -7,12 +7,13 @@
     <RelativeLayout
         android:id="@+id/post_description"
         android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_height="100dp">
         <ImageView
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:id="@+id/user_post_image"
-            android:layout_height="match_parent" android:contentDescription="@string/todo" />
-        <EditText
+            android:layout_height="100dp"
+            android:contentDescription="@string/todo" />
+        <com.neartag.in.composer.HashTagAutoCompleteTextView
             android:background="@null"
             android:id="@+id/composer_post_text"
             android:backgroundTint="@color/grey"
@@ -65,6 +66,13 @@
         android:gravity="center"
         android:layout_marginLeft="1dp"
         android:layout_marginRight="1dp"/>
+    <AutoCompleteTextView
+        android:id="@+id/auto_comp"
+        android:layout_below="@+id/recommended_tags_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
 
 
 </RelativeLayout>
