--- a/app/src/main/res/drawable/circular_border_comment.xml
+++ b/app/src/main/res/drawable/circular_border_comment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorWhite" />
+    <solid android:color="@color/white" />
 
     <stroke android:width="2dp"
         android:color="#737074"
