--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -164,6 +164,22 @@
             android:text="15 पसंद . 34 शेयर . 4 राय"
             />
 
+        <TextView
+            android:visibility="invisible"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="11dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/learn_more"
+            android:layout_below="@+id/image_section"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="@color/link_blue"
+            android:text="पूरा पढ़ें"
+            />
+
+
         <RelativeLayout
             android:id="@+id/logo"
             android:layout_width="match_parent"
